--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ transformers~=4.24.0
 wandb~=0.13.5
 tqdm~=4.64.1
 tokenizers~=0.13.2
-Pillow
-types-ujson
-wandb~=0.13.5
-razdel
-freetype-py
+Pillow~=9.3.0
+razdel~=0.5.0
+freetype-py~=2.3.0
+setuptools~=65.5.0
+loguru~=0.6.0
