--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch~=1.13.0
-numpy~=1.23.4
-scikit-learn~=1.1.3
+numpy
+scikit-learn
 pymorphy2~=0.9.1
 ujson~=5.5.0
 transformers~=4.24.0
@@ -13,3 +13,4 @@ freetype-py~=2.3.0
 setuptools~=65.5.0
 loguru~=0.6.0
 fonttools~=4.38.0
+ftfy~=6.1.1
